Added CSS to all pages and cleaned it up to the best of my ability

--- a/WellnessHub/pages/contact.html
+++ b/WellnessHub/pages/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Wellness Hub - Contact Us</title>
     <script defer src="js/contact.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
