--- a/WellnessHub/pages/discussion.html
+++ b/WellnessHub/pages/discussion.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Wellness Hub - Discussion Board</title>
     <script defer src="js/discussion.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
