--- a/WellnessHub/pages/diet.html
+++ b/WellnessHub/pages/diet.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diet & Nutrition - Wellness Hub</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
