--- a/WellnessHub/pages/help.html
+++ b/WellnessHub/pages/help.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Wellness Hub - Help</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
