--- a/WellnessHub/pages/diet.html
+++ b/WellnessHub/pages/diet.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-    <h1>Wellness Hub</h1>
+    <h1><a href="index.html" class="title-link">Wellness Hub</a></h1>
     <nav>
         <ul>
             <li><a href="health.html">Health</a></li>
