Added a search bar to type into

--- a/WellnessHub/pages/index.html
+++ b/WellnessHub/pages/index.html
@@ -25,9 +25,14 @@
 </header>
 
 <section>
-    <h2>Health & Wellness</h2>
-    <p>Resources for aging with confidence</p>
-    <button onclick="alert('Search functionality coming soon!')">Search</button>
+    <div class="container">
+        <h2>Health & Wellness</h2>
+        <p>Resources for aging with confidence</p>
+        <div class="search-wrapper">
+            <input type="search" placeholder="Search articles..." class="search-input">
+            <button onclick="alert('Search functionality coming soon!')" class="search-btn">Search</button>
+        </div>
+    </div>
 </section>
 
 <section>
